# maayan

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: bootstrap.sh  maayan
docs/: BENCHMARK_PLAN.md  BUILD_PLAN.md  BUILD_PLAN_PHASE2.md  BUILD_PLAN_PHASE4.md  BUILD_PLAN_PHASE5.md  BUILD_PLAN_PHASE6.md  CURRICULUM.md  CURRICULUM2.md  CURRICULUM2_FULL.md  CURRICULUM_FULL.md  FUNDING_BRIEF.md  MAAYAN_AND_CHAYOLEI.he.md  MAAYAN_AND_CHAYOLEI.md  OVERVIEW.he.md  OVERVIEW.md  POPULATE_REPORT.md  POPULATE_RUNBOOK.md  RUNBOOK.md  TEACHING.md  UI_GUIDE.md  build_curriculum.py  build_curriculum2.py
docs/academy_deploy/: DEPLOY.md  HOSTING_RESEARCH.md  PRISMA_DB.md  README.md
docs/cloud_deploy/: 01_MANUAL_SETUP.md  02_USER_MANAGEMENT.md  03_DEPLOY_ORACLE.md  04_HOSTING_MIGRATION.md  05_NEXT_STEPS.md  06_OPERATOR_MANUAL.md  README.md
docs/lessons/: 00-1-what-is-rag.md  00-2-maayan-thesis.md  00-3-run-the-loop.md  01-1-embeddings.md  01-2-chunking.md  01-3-normalization.md  02-1-vector-db.md  02-2-indexing-pipeline.md  02-3-hybrid-rrf.md  02-4-rerank-and-filters.md  03-1-generation-backend.md  03-2-grounded-prompt.md  03-3-default-deny.md  03-4-context-followups.md  04-1-why-eval-metrics.md  04-2-running-the-harness.md  04-3-gold-sets.md  05-1-dependency-injection.md  05-2-typed-pydantic.md  05-3-config-driven.md  05-4-clock-and-testing.md  06-1-provenance.md  06-2-capture.md  06-3-seeds-and-develop.md  06-4-approval-gate.md  06-5-threads-and-lexicon.md  07-1-setup-and-deps.md  07-2-the-knobs.md  07-3-backend-swap.md  07-4-growing-the-corpus.md  07-5-web-ui.md  08-1-improving-quality.md  08-2-phase4-eraser.md  08-3-phase5-composition.md  08-4-fine-tuning.md  README.md
docs/lessons2/: 00-1-the-ceiling.md  00-2-the-three-moves.md  00-3-feel-the-difference.md  01-1-verbatim-underretrieves.md  01-2-multiquery-hyde.md  01-3-lexicon-expansion.md  01-4-rrf-and-multiquery.md  02-1-one-pass-vs-two-stages.md  02-2-the-study-map.md  02-3-synthesis-weave.md  02-4-verify-and-default-deny.md  03-1-cost-ladder.md  03-2-eval-expand.md  04-1-knobs-and-recipes.md  04-2-prompts-and-failures.md  05-1-the-demo.md  05-2-three-audiences.md  05-3-the-horizon.md
eval/: benchmark_goldset.yaml  crosstext_goldset.yaml  develop_goldset.yaml  goldset.yaml
maayan/: __init__.py  cli.py  clock.py  config.py
maayan/audio/: __init__.py  models.py  store.py
maayan/capture/: __init__.py  convert.py  factory.py  models.py  populate.py  service.py  store.py  suggestions.py
maayan/compose/: __init__.py  assemble.py  factory.py  models.py  service.py  store.py
maayan/corpus/: __init__.py  chabad.py  chunker.py  ingest.py  models.py  normalize.py  sefaria.py  store.py
maayan/develop/: __init__.py  convert.py  factory.py  models.py  service.py  store.py
maayan/embed/: __init__.py  base.py  bgem3.py  factory.py  fake.py
maayan/eval/: __init__.py  answer_harness.py  answer_metrics.py  benchmark.py  crosstext_harness.py  crosstext_metrics.py  develop_goldset.py  develop_harness.py  develop_metrics.py  goldset.py  harness.py  (+2 more)
tests/: conftest.py  test_answer_eval.py  test_answer_metrics.py  test_benchmark.py  test_bootstrap.py  test_capture.py  test_chabad.py  test_chunker.py  test_cli_annotate.py  test_cli_url.py  test_compose.py  test_compose_assemble.py  test_compose_fill.py  test_connection_populate.py  test_crosstext_eval.py  test_develop.py  test_develop_eval.py  test_drip.py  test_eval.py  test_expand.py  test_fuse.py  test_inbox.py  test_inbox_ui.py  test_index.py  test_judge.py  test_lexicon.py  test_lexicon_populate.py  test_multiquery_retriever.py  test_normalize.py  test_ocr.py  test_ocr_ui.py  test_ollama.py  test_openrouter_backend.py  test_rag.py  test_reading.py  test_retract.py  test_retrieve.py  test_sefaria_client.py  test_stats.py  test_store.py  (+6 more)
(+88 files in other folders)
