[project]
name = "maayan"
version = "0.1.0"
description = "Esoteric Torah RAG — local-first chassidus/Kabbalah retrieval with an expert capture loop"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Esoterics611" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "brotli>=1.1",       # chabadlibrary.org API responses are brotli-encoded
    "qdrant-client>=1.12",
    "openai>=1.40",
    "pyyaml>=6.0",
]

# Heavy ML deps live in extras so the core skeleton + unit tests stay fast to
# install. `uv sync --extra ml` pulls torch/FlagEmbedding when you reach the
# embedding/index prompts. `uv sync --extra ui` for the FastAPI UI.
[project.optional-dependencies]
ml = [
    "FlagEmbedding>=1.2.10",
    "torch>=2.2",
    "faster-whisper>=1.0",   # local shiur transcription (CTranslate2 Whisper); Prompt 25+
]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",   # FastAPI multipart uploads (audio); Prompt 26+
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "types-PyYAML>=6.0",
]

[project.scripts]
maayan = "maayan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maayan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Third-party libs without type stubs, or heavy ml-extra deps not installed in the
# light CI (torch/FlagEmbedding). CI syncs core+dev+ui, so these stay ignorable.
[[tool.mypy.overrides]]
module = ["FlagEmbedding.*", "qdrant_client.*", "torch", "torch.*", "faster_whisper.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are the framework idiom for argument defaults (not a
# mutable-default bug) — allow them so B008 doesn't fire on routes.
extend-immutable-calls = [
    "fastapi.File", "fastapi.Form", "fastapi.Depends",
    "fastapi.Query", "fastapi.Path", "fastapi.Header",
]
